# optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.nodejs  Dockerfile.python  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  compose.yml  config.example.yml  deploy-synapse.sh  docker-compose.yml  index.js  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_mission.py  setup.py
.github/workflows/: api-atlas.yml  atlas.yml  build-syzygyos.yml  ci.yml  cicd-synapse.yml  file-tree.yml  flawmode-ci.yml  graphs.yml  omega-docs.yml  python-ci.yml  web-integration.yml
agentic_orchestration/: README.md  config.py  requirements.txt  run.py  run_forecaster.py
agentic_orchestration/agents/: auto_debugger.py  exploit_injector.py  selfmutatingagent.py
agentic_orchestration/apis/: __init__.py  claude.py  gemini.py  openai.py  registry.py
agentic_orchestration/benchmarks/: api_benchmark.py  fingerprint.py  latency_logger.py
agentic_orchestration/copilot/: __init__.py  fingerprint.py  mutation_engine.py  traceback_logger.py
agentic_orchestration/crawler/: hiddenapitraceback.py  js_scraper.py
agentic_orchestration/forecasting/: __init__.py  repo_forecaster.py
agentic_orchestration/jules/: __init__.py  fallback_router.py  orchestrator.py  strategy_selector.py
agentic_orchestration/memory/: audit_trail.py  mutation_history.py  neo4j_anchor.py
agentic_orchestration/orchestration/: agenticflowloop.py  xbow_visualizer.py  xbowgraphbuilder.py
agentic_orchestration/vm/: deploy.sh  deploygooglevm.sh  startup.sh  startup_config.yaml
agentic_orchestration/workflows/: __init__.py  dryrunharness.py  meta_controller.py  plannerexecutorverifier.py  react_loop.py
agents/adapters/: claude_adapter.py  gemini_adapter.py
agents/gitops/: pr_drafter.py
agents/jules/: debugandpatch.py
agents/neo4j/: anchor.py
agents/opa/: policy_evaluator.py
ai-workflow/activities/: onedrive_sync.py
ai-workflow/storage/: memory_store.py
ai-workflow/workflows/: onedrive_workflow.py
audit/: availability.csv  entropy_injection.json  mutations.jsonl
configs/: config.example.yaml
cross_platform_validator/: validator.py  workflow.py
docs/: AGENT_COMMENTS.md  ARCH_PREFS.md  AVAILABILITY.md  BOUNTIES.md  BUGFIXES.md  FEATURES.md  RISK.md  TEAM_MEMORY.md  VAULT.md  build_dependencies.md  jules_mission_omega_manifest.md
docs/api/: TREE.md  endpoints.jsonl  hidden.csv  lineage.mmd  service_graph.mmd  vm-routes.md
docs/citations/: MASTER_INDEX.md
docs/graphs/: code_graph.json  code_graph.mmd  heal_plan_service_ports.json  service_graph.json
docs/guides/: gce-pip-no-space.md
docs/tree/: README.md  TREE.md  dirs.json  files.jsonl  summary.csv
examples/: README.md  check_build_dependencies.py
flaw_first_optimizer/: __init__.py  agent_router.py  airgap_overlay.py  audittrailwriter.py  benchmark_alignment.py  benchmark_runner.py  benchmarks.py  dev_ui.py  doc_pipeline.py  entropy_injector.py  jules_agent.py  julesselfevolver.py  legallabelingui.py  mission_thread.py  mutate_prompt.py  mutation_anchor.py  mutation_suggester.py  neo4j_mapper.py  offlinemodelmirror.py  pr_simulator.py  psi_kernel.py  qdrant_indexer.py  repo_fingerprint.py  reroute_replay.py  reroute_traceback.py  security_scanner.py
infra/terraform/: syzygyos.tf
jules/: __init__.py  worker.py  workflow.py
jules/adapters/: __init__.py  ai_adapter.py  git_adapter.py  neo4j_adapter.py
jules/core/: __init__.py  agent.py
jules_mission_omega/: README.md  benchmark_runner.py  dry_run_harness.py  hf_model_router.py  julesmissionomega.py  mutation_anchor.py  psi_kernel.py  reroute_traceback.py
k8s/: README.md  intel-harvester-cronjob.yaml  jules-worker-deployment.yaml  monday-sync-deployment.yaml  namespace.yaml  secrets.yaml
k8s/base/: intel_harvester-cronjob.yaml  kustomization.yaml  semantic-search-api.yaml  synapse-cortex-worker.yaml
memory/: SELF_CYCLE_001.json
memory_artifacts/: memorytags.md
optimizer/: __init__.py  auth_matrix.py  cli.py  engine.py  logging_config.py  node.py  universal.py
optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
optimizer/agentic_api/: router.py  run.py
optimizer/analytics/: risk_classifiers.py
optimizer/api/: __init__.py  app.py  deps.py  main.py  models.py
optimizer/apiatlas/: cli.py  config.yaml  debugger.py  heal.py  health.py  scanner.py
optimizer/auth/: __init__.py  auth_matrix.py
optimizer/benchmark/: availability_stress.py  benchmarkrunner.py
optimizer/cli/: main.py  vm.py
optimizer/config/: __init__.py  logging_config.py  settings.py
optimizer/context_engine/: context_db.py  context_retriever.py  fingerprint_logger.py  reroute_resolver.py  spacetime_indexer.py
optimizer/contextengine/: contextdb.py  contextretriever.py  spacetimeindexer.py
optimizer_sentinel/: trigger.py  worker.py
policies/: merge_control.rego
scripts/: DirectiveReplayHarness.py  commitandmerge.py  deploy-opa.sh  exploitlineagetracer.py  failure_tracer.py  install_dependencies.sh  install_systemd.sh  jules_memory_anchor.py  jules_recursive_loop_engine.py  jules_self_rewriter.py  julesflawmaprunner.py  load-opa-policies.sh  patch_benchmark_matrix.py  pre-commit-hook.sh  selfhealingloop.py  verify_gateway.sh
sentinel_core/: main.py
services/: __init__.py  requirements.txt
systemd/: jules-api.service  jules-mcp-manager.service
syzygy-os/: flake.nix
task_simulator/: README.md  requirements.txt  simulator.py
tests/: __init__.py  test_agentic_api_smoke.py  test_api.py  test_api_v1.py  test_auth_matrix.py  test_build_helper.py  test_cli.py  test_cli_smoke.py  test_console_scripts.py  test_core.py  test_cross_platform_validator.py  test_engine.py  test_jules_agent.py  test_jules_agent_suite.py  test_jules_self_evolver.py  test_node.py  test_palantir_harvester.py  test_pybullet_engine.py  test_risk_scan.py  test_self_healing.py  test_semantic_search.py  test_xbow_validator.py  testcommitintegrity.py  testflawmaptrace.py  testrecoverycycle.py
(+169 files in other folders)
